sidebar data from strapi

--- a/assets/scss/_paslaugos.scss
+++ b/assets/scss/_paslaugos.scss
@@ -17,7 +17,7 @@
         width: 1.6rem;
         height: 1.6rem;
         margin-right: 1rem;
-        content: url("./../img/icons/check.svg");
+        content: url("/img/icons/check.svg");
       }
     }
     @include mQ(768px) {
