--- a/assets/scss/_paslaugos.scss
+++ b/assets/scss/_paslaugos.scss
@@ -3,6 +3,11 @@
     margin-bottom: 3rem;
   }
   &__content {
+    h3 {
+      font-size: 2rem;
+      font-weight: 500;
+      margin-bottom: 1rem;
+    }
     li {
       position: relative;
       font-size: 2rem;
@@ -17,7 +22,7 @@
         width: 1.6rem;
         height: 1.6rem;
         margin-right: 1rem;
-        content: url("/img/icons/check.svg");
+        content: url('/img/icons/check.svg');
       }
     }
     @include mQ(768px) {
