--- a/assets/scss/_aside.scss
+++ b/assets/scss/_aside.scss
@@ -66,9 +66,13 @@
     &__subtitle {
       margin-left: -4rem;
       margin-right: -4rem;
-      font-size: 1.6rem;
-      font-weight: 300;
+      font-size: 1.4rem;
+      font-weight: 400;
       text-transform: uppercase;
+      padding: 0 1.6rem;
+      @include mQ(768px) {
+        font-size: 1.2rem;
+      }
     }
   }
   .nav {
