--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -137,11 +137,20 @@ h2 {
     &::before {
       position: absolute;
       width: 100%;
-      height: 32.8rem;
+      height: 32.3rem;
+    }
+  }
+  @media (max-width: 386px) {
+    &::before {
+      height: 34rem;
     }
   }
 }
 
 strong {
   font-weight: 500;
+}
+
+.md p {
+  margin-bottom: 1.5rem;
 }
