--- a/assets/scss/_aside.scss
+++ b/assets/scss/_aside.scss
@@ -70,6 +70,8 @@
       font-weight: 400;
       text-transform: uppercase;
       padding: 0 1.6rem;
+      max-width: 300px;
+      margin: 0 auto;
       @include mQ(768px) {
         font-size: 1.2rem;
       }
